name:                blog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Cj-bc/blog#readme
license:             BSD3
license-file:        LICENSE
author:              Cj.bc_sd a.k.a Cj-bc
maintainer:          cj.bc-sd@outlook.jp
copyright:           MIT
category:            Web
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.10

executable blog
  main-is:             app/site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  other-modules:       MyBlog.Contexts, MyBlog.Pandoc
  build-depends:       base >= 4.7 && < 5,
                       hakyll,
                       pandoc,
                       pandoc-types,
                       data-default,
                       filepath,
                       shelly,
                       attoparsec,
                       text,
                       blaze-html,
                       microlens-platform,
                       containers